RESOLVED FIXED174593
InsertOrderedList command applied to table cells inserts an extra BR before the table
https://bugs.webkit.org/show_bug.cgi?id=174593
Summary InsertOrderedList command applied to table cells inserts an extra BR before t...
Javier Fernandez
Reported 2017-07-17 14:07:08 PDT
Created attachment 315709 [details] Test case to reproduce the bug What steps will reproduce the problem? (1) Load the attached test case. The contents of the table will be selected on load (2) Hit the "List" button multiple times. What is the expected result? The cell content become a list item after the first click. List items become regular text after a new click. Subsequent clicks will produce the same results. What happens instead? On every second click, the table will move down.
Attachments
Test case to reproduce the bug (376 bytes, text/html)
2017-07-17 14:07 PDT, Javier Fernandez
no flags
Patch (20.78 KB, patch)
2017-07-21 06:17 PDT, Javier Fernandez
no flags
Archive of layout-test-results from ews124 for ios-simulator-wk2 (942.03 KB, application/zip)
2017-07-21 07:43 PDT, Build Bot
no flags
Patch (20.56 KB, patch)
2017-07-21 14:22 PDT, Javier Fernandez
no flags
Archive of layout-test-results from ews125 for ios-simulator-wk2 (1.48 MB, application/zip)
2017-07-21 17:06 PDT, Build Bot
no flags
Patch (20.56 KB, patch)
2017-07-23 14:07 PDT, Javier Fernandez
no flags
Javier Fernandez
Comment 1 2017-07-21 06:17:19 PDT
Build Bot
Comment 2 2017-07-21 07:43:33 PDT
Comment on attachment 316084 [details] Patch Attachment 316084 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/4161444 New failing tests: editing/inserting/insert-list-in-table-cell-07.html editing/inserting/insert-list-in-table-cell-03.html
Build Bot
Comment 3 2017-07-21 07:43:35 PDT
Created attachment 316086 [details] Archive of layout-test-results from ews124 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews124 Port: ios-simulator-wk2 Platform: Mac OS X 10.12.5
Javier Fernandez
Comment 4 2017-07-21 14:22:56 PDT
Build Bot
Comment 5 2017-07-21 17:06:54 PDT
Comment on attachment 316122 [details] Patch Attachment 316122 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/4164195 Number of test failures exceeded the failure limit.
Build Bot
Comment 6 2017-07-21 17:06:55 PDT
Created attachment 316147 [details] Archive of layout-test-results from ews125 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews125 Port: ios-simulator-wk2 Platform: Mac OS X 10.12.5
Javier Fernandez
Comment 7 2017-07-23 14:07:35 PDT
WebKit Commit Bot
Comment 8 2017-07-26 02:48:41 PDT
Comment on attachment 316235 [details] Patch Clearing flags on attachment: 316235 Committed r219914: <http://trac.webkit.org/changeset/219914>
WebKit Commit Bot
Comment 9 2017-07-26 02:48:42 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.